--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,5 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@pages/*": ["src/pages/*"],
-      "@components/*": ["src/components/*"],
-      "@data/*": ["src/dummyData/*"],
-      "@layout/*": ["src/layout/*"]
-    },
     "target": "es5",
     "lib": [
       "dom",
@@ -28,6 +21,6 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src/**/*"
+    "src"
   ]
 }
